# delivery_helper

./: .gitignore  README.md  manage.py  package-lock.json  plannings.md  pyproject.toml  requirements.txt
delivery_helper/: asgi.py  settings.py  urls.py  wsgi.py
delivery_helper_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
delivery_helper_app/frontend/: .gitignore  package.json  uno.config.ts  vite.config.ts
delivery_helper_app/frontend/src/: vite-env.d.ts
delivery_helper_app/migrations/: 0001_initial.py  0002_alter_customer_order_customer_id.py
delivery_helper_app/templates/delivery_helper_app/: customer.html  delivery_agent_page.html  home.html  temp.html
delivery_helper_app/templates/registration/: login.html  signup.html
docs/: plannings.md  setup.md
docs/dev_guides/: frontend.md
google_map_project/: readme.md
google_map_project/google_map_app/: admin.py  models.py  views.py
google_map_project/google_map_app/migrations/: 0001_initial.py  0002_alter_user_table_password.py  0002_user_table.py  0003_alter_user_table_partner_id.py  0003_location_table.py  0003_remove_user_table_user_type_user_table_groups_and_more.py  0004_alter_user_table_partner_id_and_more.py  0004_customer_order_order_assign.py  0004_user_table_user_type.py  (+4 more)
google_map_project/google_map_project/: asgi.py  settings.py  urls.py  wsgi.py
lifecycle/: build.sh
static/: manifest.json
static/assets/: temp-DUH8OeR7.js
staticfiles/: manifest.json
staticfiles/assets/: customer-Be5vzPm6.css  customer-Dc9-GkoD.js
theme/templates/: base.html
(+19 files in other folders)
