[project]
name = "delivery-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=5.2.4",
    "django-stubs>=5.2.2",
    "django-tailwind[reload]>=4.2.0",
    "django-vite>=3.1.0",
    "honcho>=2.0.0",
    "mysqlclient>=2.2.7",
]
